# serve-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.sh
serve_mcp/: __init__.py  server.py
